--- a/Documents/report/ref.bib
+++ b/Documents/report/ref.bib
@@ -165,3 +165,32 @@
 	year = {2018},
 	file = {Conditional Variational Autoencoder:/Users/t/Zotero/storage/9CKR5TRI/cvae.html:text/html}
 }
+
+@article{cho_properties_2014,
+	title = {On the {Properties} of {Neural} {Machine} {Translation}: {Encoder}-{Decoder} {Approaches}},
+	shorttitle = {On the {Properties} of {Neural} {Machine} {Translation}},
+	url = {http://arxiv.org/abs/1409.1259},
+	abstract = {Neural machine translation is a relatively new approach to statistical machine translation based purely on neural networks. The neural machine translation models often consist of an encoder and a decoder. The encoder extracts a fixed-length representation from a variable-length input sentence, and the decoder generates a correct translation from this representation. In this paper, we focus on analyzing the properties of the neural machine translation using two models; RNN Encoder--Decoder and a newly proposed gated recursive convolutional neural network. We show that the neural machine translation performs relatively well on short sentences without unknown words, but its performance degrades rapidly as the length of the sentence and the number of unknown words increase. Furthermore, we find that the proposed gated recursive convolutional network learns a grammatical structure of a sentence automatically.},
+	urldate = {2018-12-29},
+	journal = {arXiv:1409.1259 [cs, stat]},
+	author = {Cho, Kyunghyun and van Merrienboer, Bart and Bahdanau, Dzmitry and Bengio, Yoshua},
+	month = sep,
+	year = {2014},
+	note = {arXiv: 1409.1259},
+	keywords = {Computer Science - Computation and Language, Statistics - Machine Learning},
+	file = {arXiv\:1409.1259 PDF:/Users/t/Zotero/storage/EZMM3C87/Cho et al. - 2014 - On the Properties of Neural Machine Translation E.pdf:application/pdf;arXiv.org Snapshot:/Users/t/Zotero/storage/FMZNDDTL/1409.html:text/html}
+}
+
+@article{chung_empirical_2014,
+	title = {Empirical {Evaluation} of {Gated} {Recurrent} {Neural} {Networks} on {Sequence} {Modeling}},
+	url = {http://arxiv.org/abs/1412.3555},
+	abstract = {In this paper we compare different types of recurrent units in recurrent neural networks (RNNs). Especially, we focus on more sophisticated units that implement a gating mechanism, such as a long short-term memory (LSTM) unit and a recently proposed gated recurrent unit (GRU). We evaluate these recurrent units on the tasks of polyphonic music modeling and speech signal modeling. Our experiments revealed that these advanced recurrent units are indeed better than more traditional recurrent units such as tanh units. Also, we found GRU to be comparable to LSTM.},
+	urldate = {2018-12-29},
+	journal = {arXiv:1412.3555 [cs]},
+	author = {Chung, Junyoung and Gulcehre, Caglar and Cho, KyungHyun and Bengio, Yoshua},
+	month = dec,
+	year = {2014},
+	note = {arXiv: 1412.3555},
+	keywords = {Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing},
+	file = {arXiv\:1412.3555 PDF:/Users/t/Zotero/storage/QL622TL9/Chung et al. - 2014 - Empirical Evaluation of Gated Recurrent Neural Net.pdf:application/pdf;arXiv.org Snapshot:/Users/t/Zotero/storage/CI25DIY9/1412.html:text/html}
+}
