initial test for git changes

--- a/Documents/report/main.tex
+++ b/Documents/report/main.tex
@@ -104,6 +104,8 @@ Recurrent neural networks (CNNs) are a particular class of neural networks such 
 \subsubsection{Backpropagation through Time}
 	something
 
+\subsubsection{Problems}
+
 Theoretically, RNNs showed promise but there existed a multitude of problems. Firstly, It became aparrent that it was very difficult for RNNs to leverage relationships between potentially relevant inputs and outputs - there isn't necessarily a clear indicator in the architecture that could facilitate this feature. This is described as a long range dependency problem. Furthermore, they were especially impractical due to the vanishing and exploding gradient problems having a larger effect on training. This is by design, as the architecture of the network.
 
 \subsubsection{LSTM}
