--- a/Documents/report/ref.bib
+++ b/Documents/report/ref.bib
@@ -191,6 +191,20 @@
 	month = dec,
 	year = {2014},
 	note = {arXiv: 1412.3555},
-	keywords = {Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing},
+	keywords = {Computer Science - Neural and Evolutionary Computing, Computer Science - Machine Learning},
 	file = {arXiv\:1412.3555 PDF:/Users/t/Zotero/storage/QL622TL9/Chung et al. - 2014 - Empirical Evaluation of Gated Recurrent Neural Net.pdf:application/pdf;arXiv.org Snapshot:/Users/t/Zotero/storage/CI25DIY9/1412.html:text/html}
+}
+
+@article{bahdanau_neural_2014,
+	title = {Neural {Machine} {Translation} by {Jointly} {Learning} to {Align} and {Translate}},
+	url = {http://arxiv.org/abs/1409.0473},
+	abstract = {Neural machine translation is a recently proposed approach to machine translation. Unlike the traditional statistical machine translation, the neural machine translation aims at building a single neural network that can be jointly tuned to maximize the translation performance. The models proposed recently for neural machine translation often belong to a family of encoder-decoders and consists of an encoder that encodes a source sentence into a fixed-length vector from which a decoder generates a translation. In this paper, we conjecture that the use of a fixed-length vector is a bottleneck in improving the performance of this basic encoder-decoder architecture, and propose to extend this by allowing a model to automatically (soft-)search for parts of a source sentence that are relevant to predicting a target word, without having to form these parts as a hard segment explicitly. With this new approach, we achieve a translation performance comparable to the existing state-of-the-art phrase-based system on the task of English-to-French translation. Furthermore, qualitative analysis reveals that the (soft-)alignments found by the model agree well with our intuition.},
+	urldate = {2019-01-02},
+	journal = {arXiv:1409.0473 [cs, stat]},
+	author = {Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+	month = sep,
+	year = {2014},
+	note = {arXiv: 1409.0473},
+	keywords = {Computer Science - Computation and Language, Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing, Statistics - Machine Learning},
+	file = {arXiv\:1409.0473 PDF:/Users/t/Zotero/storage/NWWP8J55/Bahdanau et al. - 2014 - Neural Machine Translation by Jointly Learning to .pdf:application/pdf;arXiv.org Snapshot:/Users/t/Zotero/storage/W9PVX9S7/1409.html:text/html}
 }
