--- a/Documents/report/main.tex
+++ b/Documents/report/main.tex
@@ -108,7 +108,7 @@ Recurrent neural networks (CNNs) are a particular class of neural networks such 
 
 Theoretically, RNNs showed promise but there existed a multitude of problems. Firstly, It became aparrent that it was very difficult for RNNs to leverage relationships between potentially relevant inputs and outputs - there isn't necessarily a clear indicator in the architecture that could facilitate this feature. This is described as a long range dependency problem. Furthermore, they were especially impractical due to the vanishing and exploding gradient problems having a larger effect on training. This is by design, as the architecture of the network.
 
-\subsection{}{LSTM}
+\subsection{LSTM}
 
 \begin{figure}[!ht]
 	\centering
@@ -183,7 +183,7 @@ Seq2Seq, introduced by \cite{sutskever_sequence_2014} is a modern interpretation
       
 	\centering
 	\includegraphics[width=100mm]{diagrams/seq2seq.pdf}
-	\caption{An abstracted model of the seq2seq rchitecture. \label{seq2seq}}
+	\caption{An abstracted model of the seq2seq architecture, where the encoder (pink) takes in the input sequence, and the decoder (blue) shows the output sequence.\label{seq2seq}}
   \end{figure}
 
 
